# cuntainer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test.yaml  tt.rb
fakeroot/: busybox
include/: cuntainer.h
lib/bdsl/: builder.rb  cmd.rb  config.rb  pkg.rb
pkgs/: binutils.rb
pkgs/binutils/: binutils-2.24-bootstrap_p1.rb  binutils-2.24-bootstrap_p2.rb
pkgs/busybox/: busybox-1.22.1-bootstrap.rb
pkgs/gcc/: gcc-4.9.1-bootstrap_p1.rb
pkgs/gcc/scripts/: tool_p1_fix.sh
pkgs/glibc/: glibc-2.19-bootstrap.rb  glibc-2.20-bootstrap.rb
scripts/: dev_inst.sh  unmount_all_env.sh
src/: linkRecursive.c  mounts.c  nsswitcher.c  prepareEnvDir.c  utils.c  utilsMount.c
